--- a/frontend/src/app/layout/purchase/add-purchase/add-purchase.component.scss
+++ b/frontend/src/app/layout/purchase/add-purchase/add-purchase.component.scss
@@ -81,6 +81,7 @@ table {
         .padding {
 
             padding: 10px 0 0 15px;
+            height: 70px;
         }
     }
 
@@ -112,11 +113,12 @@ table {
 mat-spinner {
     margin: 7px;
 }
-.checkbox-margin{
+
+.checkbox-margin {
     margin-top: 23px;
     margin-right: 14px;
 }
-.float{
+
+.float {
     float: right;
 }
-
