sales quotation to sales move done with customer

--- a/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
+++ b/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
@@ -131,7 +131,7 @@
                     <td mat-cell *matCellDef="let element">
                         <ng-container *ngIf="loggedInUsersData.user_name === element.user_name">
                         <button mat-icon-button matTooltip="Move to sales " type="button"
-                            (click)="onSelectCustomers(element)">
+                            (click)="onSelectCustomers(element.id)">
                             <mat-icon aria-label="" class="green">device_hub</mat-icon>
                         </button>
                         </ng-container>
