--- a/frontend/src/app/layout/roj-med/expense_dialog/expense_dialog.component.html
+++ b/frontend/src/app/layout/roj-med/expense_dialog/expense_dialog.component.html
@@ -15,10 +15,10 @@ matSortDirection="desc">
         {{ element.description  }}
     </td>
 </ng-container>
-<ng-container matColumnDef="remarks">
+<ng-container matColumnDef="category_code">
     <th mat-header-cell *matHeaderCellDef >Remarks</th>
     <td mat-cell *matCellDef="let element">
-        {{ element.remarks | uppercase }}
+        {{ element.category_code | uppercase }}
     </td>
 </ng-container>
 <ng-container matColumnDef="amount">
