--- a/frontend/src/app/layout/roj-med/transfer_dialog/transfer_dialog.component.html
+++ b/frontend/src/app/layout/roj-med/transfer_dialog/transfer_dialog.component.html
@@ -15,16 +15,16 @@ matSortDirection="desc">
         {{ element.description  }}
     </td>
 </ng-container>
-<ng-container matColumnDef="amount">
+<ng-container matColumnDef="transfer_amount">
     <th mat-header-cell *matHeaderCellDef >Amount</th>
     <td mat-cell *matCellDef="let element">
-        {{  element.amount | currency: 'INR' }}
+        {{  element.transfer_amount | currency: 'INR' }}
     </td>
 </ng-container>
-<ng-container matColumnDef="to">
+<ng-container matColumnDef="to_user_name">
     <th mat-header-cell *matHeaderCellDef >To</th>
     <td mat-cell *matCellDef="let element">
-        {{ element.to | uppercase }}
+        {{ element.to_user_name | uppercase }}
     </td>
 </ng-container>
  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
