--- a/frontend/src/app/layout/transfer/transfer.component.html
+++ b/frontend/src/app/layout/transfer/transfer.component.html
@@ -87,10 +87,10 @@
                     {{ element.description | titlecase }}
                 </td>
             </ng-container>
-            <ng-container matColumnDef="amount">
+            <ng-container matColumnDef="transfer_amount">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Amount</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.amount | currency: 'INR' }}
+                    {{ element.transfer_amount | currency: 'INR' }}
                 </td>
             </ng-container>
             <ng-container matColumnDef="fromUserName">
